updated example configs

--- a/config.cvs.nerdaxe.example
+++ b/config.cvs.nerdaxe.example
@@ -1,15 +1,15 @@
 key,type,encoding,value
 main,namespace,,
-hostname,data,string,bitaxe
+hostname,data,string,nerdaxe
 wifissid,data,string,myssid
 wifipass,data,string,mypass
 stratumurl,data,string,public-pool.io
 stratumport,data,u16,21496
 stratumuser,data,string,bc1q29hp4fqtks2wzpmfwtpac64fnr8ujw2nvnra04.nerdqaxe
 stratumpass,data,string,x
-asicfrequency,data,u16,490
+asicfrequency,data,u16,485
 asicvoltage,data,u16,1200
-flipscreen,data,u16,0
+flipscreen,data,u16,1
 invertfanpol,data,u16,0
 autofanspeed,data,u16,0
 fanspeed,data,u16,100
