--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,9 @@ jobs:
           - board: NERDHAXEGAMMA
             label: NerdHaxe-Gamma
             upload_www: false
+          - board: NERDEKO
+            upload_www: false
+            label: NerdEko
 
     steps:
     - name: Checkout repository
