--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,6 +5,7 @@ SRCS
     "system.cpp"
     "boards/board.cpp"
     "boards/nerdaxe.cpp"
+    "boards/nerdaxegamma.cpp"
     "boards/nerdqaxeplus.cpp"
     "boards/nerdqaxeplus2.cpp"
     "boards/nerdoctaxeplus.cpp"
@@ -15,6 +16,7 @@ SRCS
     "boards/drivers/nerdaxe/DS4432U.cpp"
     "boards/drivers/nerdaxe/INA260.cpp"
     "boards/drivers/nerdaxe/EMC2101.cpp"
+    "boards/drivers/nerdaxe/TPS546.cpp"
     "boards/drivers/nerdaxe/adc.cpp"
     "boards/drivers/i2c_master.cpp"
     "history.cpp"
