added ntp time server

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,6 +3,7 @@ SRCS
     "main.cpp"
     "nvs_config.cpp"
     "system.cpp"
+    "ntp_time.cpp"
     "boards/board.cpp"
     "boards/nerdaxe.cpp"
     "boards/nerdaxegamma.cpp"
