Asics high temp in power management Take the high temperature into the power management task, to deal with differences in temperature readings. I have a "lazy" ASIC (#0), it doesn't return any nonce, and its temperature is always lower than the others. So the temperature sensor returns almost 10 degrees lower than the other ASIC IC.

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@ components/components/*
 config.bin
 config.cvs
 managed_components/*
+docker/build_docker.sh
+docker/build_docker.sh
+merge_bin.sh
+docker/
+nerdqaxe+.bin
+.gitignore
