--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,6 +65,16 @@ jobs:
         0xf10000 build/ota_data_initial.bin \
         -o esp-miner-factory-${{ matrix.label }}-${{ env.VERSION_TAG }}.bin
 
+    - name: Generate SHA-256 Sum of factory file
+      run: |
+        sha256sum esp-miner-factory-${{ matrix.label }}-${{ env.VERSION_TAG }}.bin > esp-miner-factory-${{ matrix.label }}-${{ env.VERSION_TAG }}.sha256
+
+    - name: Upload SHA-256 Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: esp-miner-factory-${{ matrix.label }}-${{ env.VERSION_TAG }}.sha256
+        path: esp-miner-factory-${{ matrix.label }}-${{ env.VERSION_TAG }}.sha256
+
     - name: Rename Build Artifacts
       run: |
         sudo mv build/esp-miner.bin build/esp-miner-${{ matrix.label }}.bin
@@ -90,3 +100,28 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  update-release-body:
+    runs-on: ubuntu-latest
+    needs: build-and-release
+    steps:
+    - name: Download SHA-256 Artifacts
+      uses: actions/download-artifact@v3
+      with:
+        path: ./sha256
+
+    - name: Combine SHA-256 Sums
+      run: |
+        echo "### Firmware SHA-256 Checksums" > sha256-summary.txt
+        for file in ./sha256/*.sha256; do
+          echo "#### $(basename $file .sha256)" >> sha256-summary.txt
+          cat "$file" >> sha256-summary.txt
+          echo "" >> sha256-summary.txt
+        done
+
+    - name: Update Release Body
+      uses: github/gh-cli@v2
+      with:
+        command: |
+          gh release edit ${{ needs.build-and-release.outputs.VERSION_TAG }} \
+          --notes-file sha256-summary.txt
