--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,6 +105,18 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-release
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Get Version Tag
+      id: version_tag
+      run: |
+        git fetch --tags  # Ensure all tags are fetched
+        version=$(git describe --tags --abbrev=0 2>/dev/null || git rev-parse --short HEAD)
+        echo "VERSION_TAG=${version}" >> $GITHUB_ENV
+        echo "${version}" > version.txt
+        echo "VERSION_TAG=${version}"
+
     - name: Download SHA-256 Artifacts
       uses: actions/download-artifact@v3
       with:
@@ -122,6 +134,6 @@ jobs:
 
     - name: Update Release Body
       run: |
-        gh release edit ${{ needs.build-and-release.outputs.VERSION_TAG }} --notes-file sha256-summary.txt
+        gh release edit ${{ env.VERSION_TAG }} --notes-file sha256-summary.txt
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
