--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,9 +118,11 @@ jobs:
         echo "VERSION_TAG=${version}"
 
     - name: Download SHA-256 Artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         path: ./sha256
+        pattern: *.sha256
+        merge-multiple: true
 
     - name: Combine SHA-256 Sums
       run: |
