--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,15 +118,15 @@ jobs:
         echo "VERSION_TAG=${version}"
 
     - name: Download SHA-256 Artifacts
-      uses: actions/download-artifact@v4
+      uses: actions/download-artifact@v3
       with:
-        path: ./sha256
-        merge-multiple: true
+        path: ./artifacts
 
     - name: Combine SHA-256 Sums
       run: |
         echo "### Factory files SHA-256 Checksums" > sha256-summary.txt
-        cat ./sha256/*.sha256 | sort -k2 >> sha256-summary.txt
+        files="$( find ./artifacts -name "*.sha256" | xargs )"
+        cat $files | sort -k2 >> sha256-summary.txt
 
     - name: Install GitHub CLI
       run: |
