--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -144,7 +144,7 @@ jobs:
         existing_notes=$(gh release view ${{ env.VERSION_TAG }} --json body -q '.body')
 
         # Append the new content
-        new_notes="$existing_notes\n<!--\n$(cat sha256-summary.txt)\n-->\n"
+        new_notes="$existing_notes\n<\!--\n$(cat sha256-summary.txt)\n-->\n"
 
         # Update the release body
         echo -e "$new_notes" | gh release edit ${{ env.VERSION_TAG }} --notes -
