--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -28,10 +28,10 @@ SRCS
     "./tasks/asic_result_task.cpp"
     "./tasks/influx_task.cpp"
     "./tasks/power_management_task.cpp"
+    "./tasks/btc_task.cpp"
     "./displays/displayDriver.cpp"
     "./displays/ui.cpp"
     "./displays/ui_helpers.cpp"
-    "./displays/APIs.cpp"
     "./displays/images/ui_font_DigitalNumbers16.c"
     "./displays/images/ui_font_DigitalNumbers28.c"
     "./displays/images/ui_font_DigitalNumbers16.c"
