--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -10,6 +10,7 @@ SRCS
     "boards/nerdqaxeplus2.cpp"
     "boards/nerdoctaxeplus.cpp"
     "boards/nerdoctaxegamma.cpp"
+    "boards/nerdhaxegamma.cpp"
     "boards/drivers/EMC2302.cpp"
     "boards/drivers/TMP1075.cpp"
     "boards/drivers/TPS53647.cpp"
