--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           - board: NERDAXEGAMMA
             upload_www: false
             label: NerdAxeGamma
-          - board: HERDHAXEGAMMA
+          - board: NERDHAXEGAMMA
             label: NerdHaxeGamma
             upload_www: false
 
