--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,12 @@
         "history.h": "c",
         "system.h": "c",
         "influx_task.h": "c",
-        "cmath": "c"
+        "cmath": "c",
+        "bitset": "cpp",
+        "initializer_list": "cpp",
+        "regex": "cpp",
+        "utility": "cpp",
+        "*.ipp": "cpp"
     },
     "editor.formatOnSave": false,
     "cSpell.words": [
