--- a/config.cvs.nerdaxe.example
+++ b/config.cvs.nerdaxe.example
@@ -5,12 +5,12 @@ wifissid,data,string,myssid
 wifipass,data,string,mypass
 stratumurl,data,string,public-pool.io
 stratumport,data,u16,21496
-stratumuser,data,string,bc1q29hp4fqtks2wzpmfwtpac64fnr8ujw2nvnra04.nerdqaxe
+stratumuser,data,string,bc1q29hp4fqtks2wzpmfwtpac64fnr8ujw2nvnra04.nerdaxe
 stratumpass,data,string,x
 asicfrequency,data,u16,485
 asicvoltage,data,u16,1200
 flipscreen,data,u16,1
-invertfanpol,data,u16,0
+invertfanpol,data,u16,1
 autofanspeed,data,u16,1
 fanspeed,data,u16,100
 selftest,data,u16,0
