fixed image filenames

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
             upload_www: false
           - board: NERDEKO
             upload_www: false
-            label: NerdEko
+            label: NerdEKO
 
     steps:
     - name: Checkout repository
