moved ota handler

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -33,6 +33,7 @@ SRCS
     "./http_server/handler_influx.cpp"
     "./http_server/handler_swarm.cpp"
     "./http_server/handler_system.cpp"
+    "./http_server/handler_ota.cpp"
     "./self_test/self_test.cpp"
     "./tasks/stratum_task.cpp"
     "./tasks/create_jobs_task.cpp"
