Implement ping_task with fallback support at realtime logs

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -34,6 +34,7 @@ SRCS
     "./tasks/influx_task.cpp"
     "./tasks/power_management_task.cpp"
     "./tasks/apis_task.cpp"
+    "./tasks/ping_task.cpp"
     "./displays/displayDriver.cpp"
     "./displays/ui.cpp"
     "./displays/ui_helpers.cpp"
@@ -83,6 +84,7 @@ INCLUDE_DIRS
     "spiffs"
     "vfs"
     "lvgl"
+    "lwip"
 )
 
 
