Refactor: Extract DNS resolution to dns_task module with TTL cache

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -44,6 +44,7 @@ SRCS
     "./tasks/power_management_task.cpp"
     "./tasks/apis_task.cpp"
     "./tasks/ping_task.cpp"
+    "./tasks/dns_task.cpp"
     "./displays/displayDriver.cpp"
     "./displays/ui.cpp"
     "./displays/ui_helpers.cpp"
