Refactor ping_task to use stratum-resolved IP and track RTT over sliding window

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -41,6 +41,7 @@ SRCS
     "./tasks/create_jobs_task.cpp"
     "./tasks/asic_result_task.cpp"
     "./tasks/influx_task.cpp"
+    "./tasks/ping_task.cpp"
     "./tasks/power_management_task.cpp"
     "./tasks/apis_task.cpp"
     "./displays/displayDriver.cpp"
@@ -92,6 +93,7 @@ INCLUDE_DIRS
     "spiffs"
     "vfs"
     "lvgl"
+    "lwip"
 )
 
 
