--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,6 +106,30 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Install AWS CLI v2
+      run: |
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "/tmp/awscliv2.zip"
+        unzip -q /tmp/awscliv2.zip -d /tmp
+        sudo /tmp/aws/install --update
+        aws --version
+
+    - name: Upload to Cloudflare R2
+      run: |
+        aws configure set aws_access_key_id ${{ secrets.R2_ACCESS_KEY_ID }}
+        aws configure set aws_secret_access_key ${{ secrets.R2_SECRET_ACCESS_KEY }}
+        aws configure set default.region auto
+        aws configure set default.output json
+
+        export AWS_ENDPOINT_URL="https://${{ secrets.R2_ACCOUNT_ID }}.r2.cloudflarestorage.com"
+        TARGET_DIR="${{ env.VERSION_TAG }}"
+
+        while read file; do
+          aws s3 cp "$file" "s3://webflasher/$TARGET_DIR/$(basename "$file")" \
+            --endpoint-url "$AWS_ENDPOINT_URL" \
+            --acl public-read \
+            --content-type $(file --mime-type -b "$file")
+        done < file_list.txt
+
   update-release-body:
     runs-on: ubuntu-latest
     needs: build-and-release
