--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,12 +106,12 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Install AWS CLI v2
-      run: |
-        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "/tmp/awscliv2.zip"
-        unzip -q /tmp/awscliv2.zip -d /tmp
-        sudo /tmp/aws/install --update
-        aws --version
+    # - name: Install AWS CLI v2
+    #   run: |
+    #     curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "/tmp/awscliv2.zip"
+    #     unzip -q /tmp/awscliv2.zip -d /tmp
+    #     sudo /tmp/aws/install --update
+    #     aws --version
 
     - name: Upload to Cloudflare R2
       run: |
@@ -120,6 +120,7 @@ jobs:
         aws configure set default.region auto
         aws configure set default.output json
 
+        export AWS_S3_DISABLE_MULTIPART_CHECKSUM=true
         export AWS_ENDPOINT_URL="https://${{ secrets.R2_ACCOUNT_ID }}.r2.cloudflarestorage.com"
         TARGET_DIR="${{ env.VERSION_TAG }}"
 
