--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -34,9 +34,9 @@ jobs:
     - name: Set Target for ${{ matrix.label }}
       run: |
         docker run --rm --user root -e BOARD=${{ matrix.board }} -v $PWD:/home/builder/project \
-        shufps/esp-idf-builder:0.0.2 set-target esp32s3
+        shufps/esp-idf-builder:0.0.2 idf.py set-target esp32s3
 
     - name: Build firmware for ${{ matrix.label }}
       run: |
         docker run --rm --user root -e BOARD=${{ matrix.board }} -v $PWD:/home/builder/project \
-        shufps/esp-idf-builder:0.0.2 build
+        shufps/esp-idf-builder:0.0.2 idf.py build
