testing tls server

--- a/components/connect/CMakeLists.txt
+++ b/components/connect/CMakeLists.txt
@@ -2,7 +2,7 @@ idf_component_register(
 SRCS
     "connect.c"
 
-INCLUDE_DIRS 
+INCLUDE_DIRS
     "include"
     "../../main"
 
@@ -10,4 +10,5 @@ REQUIRES
     "nvs_flash"
     "esp_wifi"
     "esp_event"
+    "mdns"
 )
