added discord watchdog alert

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -23,14 +23,15 @@ SRCS
     "boards/drivers/nerdaxe/adc.cpp"
     "boards/drivers/i2c_master.cpp"
     "history.cpp"
+    "discord.cpp"
     "./pid/PID_v1_bc.cpp"
     "./pid/pid_timer.cpp"
-
     "./http_server/http_server.cpp"
     "./http_server/http_cors.cpp"
     "./http_server/http_utils.cpp"
     "./http_server/http_websocket.cpp"
     "./http_server/handler_influx.cpp"
+    "./http_server/handler_alert.cpp"
     "./http_server/handler_swarm.cpp"
     "./http_server/handler_system.cpp"
     "./http_server/handler_ota.cpp"
