--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,6 +3,7 @@ SRCS
     "main.cpp"
     "nvs_config.cpp"
     "system.cpp"
+    "connect.cpp"
     "boards/board.cpp"
     "boards/nerdaxe.cpp"
     "boards/nerdaxegamma.cpp"
@@ -70,7 +71,6 @@ INCLUDE_DIRS
     "displays/images"
     "boards"
     "boards/drivers"
-    "../components/connect/include"
     "../components/dns_server/include"
     "../components/bm1397/include"
     "../components/influx/include"
