--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -40,6 +40,7 @@ SRCS
     "./http_server/handler_ota.cpp"
     "./http_server/handler_restart.cpp"
     "./http_server/handler_file.cpp"
+    "./http_server/handler_ota_factory.cpp"
     "./self_test/self_test.cpp"
     "./tasks/stratum_task.cpp"
     "./tasks/create_jobs_task.cpp"
