--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -12,6 +12,7 @@ SRCS
     "boards/nerdoctaxeplus.cpp"
     "boards/nerdoctaxegamma.cpp"
     "boards/nerdhaxegamma.cpp"
+    "boards/nerdqx.cpp"
     "boards/nerdeko.cpp"
     "boards/drivers/EMC2302.cpp"
     "boards/drivers/TMP1075.cpp"
@@ -23,6 +24,7 @@ SRCS
     "boards/drivers/nerdaxe/TPS546.cpp"
     "boards/drivers/nerdaxe/adc.cpp"
     "boards/drivers/i2c_master.cpp"
+    "boards/drivers/tmp451_mux.cpp"
     "history.cpp"
     "discord.cpp"
     "./pid/PID_v1_bc.cpp"
