nailed lvgl version to 8.3.11

--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -15,4 +15,4 @@ dependencies:
   #   # All dependencies of `main` are public by default.
   #   public: true
   espressif/mdns: '*'
-  lvgl/lvgl: ^8
+  lvgl/lvgl: '==8.3.11'
