reverted backport of connection.c

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,7 +3,6 @@ SRCS
     "main.cpp"
     "nvs_config.cpp"
     "system.cpp"
-    "connect.cpp"
     "sntp.cpp"
     "boards/board.cpp"
     "boards/nerdaxe.cpp"
@@ -82,6 +81,7 @@ INCLUDE_DIRS
     "displays/images"
     "boards"
     "boards/drivers"
+    "../components/connect/include"
     "../components/dns_server/include"
     "../components/bm1397/include"
     "../components/influx/include"
