removed old connect lib

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,6 +4,7 @@ SRCS
     "nvs_config.cpp"
     "system.cpp"
     "sntp.cpp"
+    "connect.cpp"
     "boards/board.cpp"
     "boards/nerdaxe.cpp"
     "boards/nerdaxegamma.cpp"
@@ -81,7 +82,6 @@ INCLUDE_DIRS
     "displays/images"
     "boards"
     "boards/drivers"
-    "../components/connect/include"
     "../components/dns_server/include"
     "../components/bm1397/include"
     "../components/influx/include"
