--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -67,6 +67,7 @@ SRCS
     "./displays/images/ui_font_vt323_21.c"
     "./displays/images/ui_font_vt323_35.c"
     "./displays/images/ui_img_found_block_png.c"
+    "./displays/images/ui_img_safe_png.c"
     "./displays/images/themes/themes.c"
     "./otp/otp.cpp"
     "./otp/qrcodegen.cpp"
