--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
       run: |
         #!/bin/bash
         COMMIT_HASH=$(git rev-parse --short HEAD)
-        find ./main/http_server/axe-os/src/app -type f -name "*.ts" \ -exec sed -i "s|__COMMIT__|${COMMIT_HASH}|g" {} \;
+        find ./main/http_server/axe-os/src/app -type f -name "*.ts" -exec sed -i "s|__COMMIT__|${COMMIT_HASH}|g" {} \;
 
     - name: Set Target
       run: |
