--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -114,6 +114,25 @@ jobs:
       run: |
         sudo mv build/esp-miner.bin build/esp-miner-${{ matrix.label }}.bin
 
+    - name: Upload build artifacts for internal testing
+      if: env.RELEASE_EXISTS == 'false'
+      uses: actions/upload-artifact@v4
+      with:
+        name: esp-miner-build-${{ matrix.label }}-${{ env.VERSION_TAG }}
+        path: |
+          esp-miner-factory-${{ matrix.label }}-${{ env.VERSION_TAG }}.bin
+          build/esp-miner-${{ matrix.label }}.bin
+        retention-days: 7
+
+    - name: Upload www.bin (only once)
+      if: env.RELEASE_EXISTS == 'false' && matrix.board == 'NERDQAXEPLUS'
+      uses: actions/upload-artifact@v4
+      with:
+        name: esp-miner-www-${{ env.VERSION_TAG }}
+        path: build/www.bin
+        retention-days: 7
+
+
     - name: Create files list
       run: |
         echo "esp-miner-factory-${{ matrix.label }}-${{ env.VERSION_TAG }}.bin" > file_list.txt
