Fix language file caching (#375)
* changed from `de.json?v=$COMMIT` to `de.$COMMIT.json` because sometimes it still was cached. Should fix it now

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,14 +28,14 @@ jobs:
             upload_www: false
             label: NerdAxeGamma
           - board: NERDHAXEGAMMA
-            label: NerdHaxe-Gamma
             upload_www: false
+            label: NerdHaxe-Gamma
           - board: NERDEKO
             upload_www: false
             label: NerdEKO
           - board: NERDQX
-            label: NerdQX
             upload_www: false
+            label: NerdQX
 
     steps:
     - name: Checkout repository
@@ -50,21 +50,42 @@ jobs:
         echo "${version}" > version.txt
         echo "VERSION_TAG=${version}"
 
+    - name: Install GitHub CLI
+      run: |
+        sudo apt-get update -y
+        sudo apt-get install -y gh
+
+    - name: Check if release exists
+      id: check_release
+      run: |
+        if gh release view "${{ env.VERSION_TAG }}" >/dev/null 2>&1; then
+          echo "RELEASE_EXISTS=true" >> $GITHUB_ENV
+        else
+          echo "RELEASE_EXISTS=false" >> $GITHUB_ENV
+        fi
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Insert Version
       run: |
         #!/bin/bash
+        set -e
         COMMIT_HASH=$(git rev-parse --short HEAD)
-        find ./main/http_server/axe-os/src/app -type f -name "*.ts" -exec sed -i "s|__COMMIT__|${COMMIT_HASH}|g" {} \;
+        sed -e "s|__COMMIT__|${COMMIT_HASH}|g" -i ./main/http_server/axe-os/src/app/app.module.ts
+
+        for l in de en es fr; do
+          mv "./main/http_server/axe-os/src/assets/i18n/${l}.json" "./main/http_server/axe-os/src/assets/i18n/${l}.${COMMIT_HASH}.json"
+        done
 
     - name: Set Target
       run: |
-        # Run the Docker container to build the project
+        # Run the Docker container to set ESP32-S3 target
         docker run --rm --user root -e BOARD=${{ matrix.board }} -v $PWD:/home/builder/project \
         shufps/esp-idf-builder:0.0.1 idf.py set-target esp32s3
 
     - name: Compile Binaries
       run: |
-        # Run the Docker container to build the project with BOARD environment variable
+        # Run the Docker container to build the project
         docker run --rm --user root -e BOARD=${{ matrix.board }} -v $PWD:/home/builder/project \
         shufps/esp-idf-builder:0.0.1 idf.py build
 
@@ -92,6 +113,40 @@ jobs:
     - name: Rename Build Artifacts
       run: |
         sudo mv build/esp-miner.bin build/esp-miner-${{ matrix.label }}.bin
+        sudo mv build/esp-miner.elf build/esp-miner-${{ matrix.label }}.elf
+
+    - name: Upload factory binary
+      if: env.RELEASE_EXISTS == 'false'
+      uses: actions/upload-artifact@v4
+      with:
+        name: esp-miner-factory-${{ matrix.label }}.bin
+        path: esp-miner-factory-${{ matrix.label }}.bin
+        retention-days: 7
+
+    - name: Upload ELF for crash analysis
+      if: env.RELEASE_EXISTS == 'false'
+      uses: actions/upload-artifact@v4
+      with:
+        name: esp-miner-${{ matrix.label }}.elf
+        path: build/esp-miner-${{ matrix.label }}.elf
+        retention-days: 7
+
+    - name: Upload BIN firmware
+      if: env.RELEASE_EXISTS == 'false'
+      uses: actions/upload-artifact@v4
+      with:
+        name: esp-miner-${{ matrix.label }}.bin
+        path: build/esp-miner-${{ matrix.label }}.bin
+        retention-days: 7
+
+    - name: Upload www.bin (only once)
+      if: env.RELEASE_EXISTS == 'false' && matrix.board == 'NERDQAXEPLUS'
+      uses: actions/upload-artifact@v4
+      with:
+        name: www.bin
+        path: build/www.bin
+        retention-days: 7
+
 
     - name: Create files list
       run: |
@@ -105,19 +160,23 @@ jobs:
       id: set_files_var
       run: echo "files=$(cat file_list.txt | tr '\n' ',')" >> $GITHUB_ENV
 
+    # Skip release upload if no release exists
+    - name: Skip release upload if not tagged
+      if: env.RELEASE_EXISTS == 'false'
+      run: echo "No GitHub release found for '${{ env.VERSION_TAG }}' — skipping release upload."
+
     - name: Upload to Existing Release
-      if: always()
+      if: env.RELEASE_EXISTS == 'true'
       uses: softprops/action-gh-release@v1
       with:
         files: ${{ env.files }}
         tag_name: ${{ env.VERSION_TAG }}
-        token: ${{ secrets.GITHUB_TOKEN }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Install rclone
       run: |
-        curl https://rclone.org/install.sh | sudo bash
+        curl -fsSL https://rclone.org/install.sh | sudo bash
 
     - name: Upload to Cloudflare R2 using rclone
       env:
@@ -132,11 +191,14 @@ jobs:
           rclone copyto "$file" "r2:${TARGET_DIR}/$(basename "$file")" --s3-acl public-read
         done < file_list.txt
 
+    outputs:
+      release_exists: ${{ env.RELEASE_EXISTS }}
 
 
   update-release-body:
     runs-on: ubuntu-latest
     needs: build-and-release
+    if: needs.build-and-release.outputs.release_exists == 'true'
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -162,7 +224,7 @@ jobs:
 
     - name: Install GitHub CLI
       run: |
-        sudo apt-get update
+        sudo apt-get update -y
         sudo apt-get install -y gh
 
     - name: Append to Release Body
